--- a/ISE535_E2.Rmd
+++ b/ISE535_E2.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "ISE535 Exam 2"
-author: "Zedan Zhao, USC ID 6994-0934-56"
-date: "2023-04-27"
+title: "Classification Spam Message"
 output:
+  html_document:
+    df_print: paged
   pdf_document: default
 ---
-## 1. Here we develop a classification model to predict if a text message is spam or not, using the words in the message. The file sms.csv has sms messages. Column type identifies the message as spam or non-spam (called ham). Column text has the text message. Use the following code to store this file into a dataframe with 2 character columns, then convert the first column to a factor. The classification model will predict if the message is spam by using the words in the message ignoring the order of the words. Thus, first we need to clean the data, split the message into words, then build the model.
+## Here we develop a classification model to predict if a text message is spam or not, using the words in the message. The file sms.csv has sms messages. Column type identifies the message as spam or non-spam (called ham). Column text has the text message. I used the following code to store this file into a dataframe with 2 character columns, then converted the first column to a factor. The classification model will predict if the message is spam by using the words in the message ignoring the order of the words. Thus, first we want to clean the data, split the message into words, then build the model.
 
 ```{r}
 #data preparation
@@ -20,7 +20,7 @@ str(df0)
 df0$type <- factor(df0$type)
 ```
 
-## a) Text messages may contain words, spaces, numbers, and punctuation. To split the message into individual words, noise characters need to be removed. The text data mining library tm is useful.
+## Text messages may contain words, spaces, numbers, and punctuation. To split the message into individual words, noise characters need to be removed. For here, I used text data mining library 'tm'.
 
 ```{r}
 # build a corpus (a collection of messages suitable for text mining)
@@ -58,7 +58,7 @@ lapply(sms_corpus[1:3], as.character)
 lapply(sms_corpus_clean[1:3], as.character)
 ```
 
-## b) (10 pts.) Convert the tm object sms_corpus_clean to a Document term matrix DTM as follows. How many binary columns does the matrix has?
+## Convert the tm object sms_corpus_clean to a Document term matrix DTM as follows. How many binary columns does the matrix has?
 
 ```{r}
 sms_dtm <- DocumentTermMatrix(sms_corpus_clean)
@@ -71,7 +71,7 @@ ncol(sms_binary_dtm)
 
 ```
 
-## c) (10 pts.) Split the matrix into train set (first 4169 rows) and test set. Further simplify these sets by keeping words that appear at least 5 times in the data.
+## Split the matrix into train set (first 4169 rows) and test set. Further simplify these sets by keeping words that appear at least 5 times in the data.
 
 ```{r}
 sms_dtm <- DocumentTermMatrix(sms_corpus_clean)
@@ -105,7 +105,7 @@ sms_test <- apply(sms_dtm_freq_test, 2, convert_counts)
 dim(sms_test)
 ```
 
-## d) (20 pts.) Use the train set to build a Naive Bayes model. Use it to predict the test set with threshold equal to 0.50. Report the TPR and FPR.
+## Use the train set to build a Naive Bayes model. Use it to predict the test set with threshold equal to 0.50. Report the TPR and FPR.
 
 ### The TPR is 0.8360656
 ### The FPR is 0.004971002
@@ -144,7 +144,7 @@ TPR
 FPR
 ```
 
-## e) (20 pts.) Change the threshold to improve the test positive accuracy rate. Report the improved TPR and FPR.
+## Change the threshold to improve the test positive accuracy rate. Report the improved TPR and FPR.
 
 ### In order to find the threshold to maximize the TPR and accuracy rate, I generated a sequence of thresholds ranging from 0.001 to 0.999 and then loop over them to calculate the TPR, FPR for each threshold. Consider the trade-off between FPR and TPR, I decided to choose the threshold that maximize the accuracy rate, instead of the true positive rate.  
 ### Therefore, the results indicate that by adjusting the threshold to 0.236, we can maximize the accuracy rate(0.976259) of the model and achieve a TPR of 0.863388 and an FPR of 0.006628003. Compared to the default threshold of 0.5, this represents an improvement in the TPR from 0.8360656 to 0.863388.
@@ -185,26 +185,4 @@ best_FPR <- FPR2[which.max(TP_acc)]
 cat("Best threshold:", best_threshold, "\n")
 cat("TPR:", best_TPR, "\n")
 cat("FPR:", best_FPR, "\n")
-```
-
-### 2. (30 pts.) The following US map shows the number of coronavirus cases per 100000 residents for each county as of April 21, 2020. The file usmap.csv has the relevant data (the size of the circles shows the number of cases in each county). You may ignore the cases in the state of Louisiana. You may use Google maps or work offline. Use R to reproduce the map (continental US only, you may ignore Alaska) as close as possible.
-
-```{r}
-library(ggmap)
-
-us <- c(left = -125, bottom = 25.75, right = -67, top = 49)
-US.map = get_stamenmap(us, zoom = 5, maptype = "toner-lite")
-
-d3 <- read.csv("usmap.csv")
-
-# ignore counties with small number of cases
-d3 = d3[d3$cases > 22,]
-# cases per 100000 residents
-d3$cases = 100000*d3$cases/d3$population
-
-
-ggmap(US.map) +
-  geom_point(data =d3, aes(x = lon, y = lat, size = cases),
-             alpha = 0.6, fill="thistle3",shape = 21,stroke = 0.3) +
-  scale_size(range = c(0, 8))
 ```
